# graphics101-imageprocessing-autograder

./: .gitignore  README.md  autograde.py  autograder-direct.py  autograder.py  header.html  imgdiff.py  imgdiff_selftest.py  pyproject.toml  sample.html
scene_files/: Cone_double.json  Cone_single.json  Cube_double.json  Cube_single.json  Cylinder_double.json  Cylinder_single.json  Plane_double.json  Plane_single.json  Scene_closestIntersection1.json  Scene_red.json  Scene_two_sided_lighting.json  Sphere_double.json  Sphere_single.json
test_cases/balls-reference/: balls-convolve-linear.png.bak
