[tool.poetry]
name = "autograder-raycasting"
version = "0.1.0"
description = "Autograder for raycasting"
authors = ["Yotam Gingold <ygingold@gmu.edu>", "Yong Li <yli69@gmu.edu>"]

[tool.poetry.dependencies]
python = ">=3.5"
numpy = ">=1.5"
pillow = ">=5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
